--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ Main.py
 __pycache__/Main.cpython-310.pyc
 __pycache__/Main.cpython-310.pyc
 Creds.txt
+
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+venv
+pip-selfcheck.json
